# mytools

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.extra/: cammands.txt  full_con.txt  mytools commands.txt  mytools_context.txt  mytools_context1.txt  mytools_context3.txt  pytest.txt
src/mytools/: __init__.py  __main__.py  cli.py  config.py  utils.py
src/mytools/plugins/: __init__.py
src/mytools/tools/: __init__.py  base.py  clean_pycache.py  context_generator.py  django_manager.py  env_manager.py  file_counter.py  file_ops.py
tests/: conftest.py  test_cli.py
tests/test_tools/: test_clean_pycache.py  test_context_generator.py  test_django_manager.py  test_env_manager.py  test_file_counter.py  test_file_ops.py
